# infinyon-sigma

./: Cargo.toml  Makefile  README.md
src/: error.rs  lib.rs  main.rs  prelude.rs
src/infinyon/: mod.rs  processor.rs  utils.rs
src/sigma/: mod.rs
src/sigma/components/: common.rs  mitre.rs  mod.rs  storage.rs  task.rs
src/sigma/components/dataset/: calendar.rs  geo_ip.rs  ip_map.rs  ip_map_list.rs  ip_net.rs  ip_set.rs  mod.rs  rules.rs  text_map.rs  text_map_list.rs  text_set.rs
src/sigma/components/metrics/: mod.rs
src/sigma/components/query/: mod.rs
src/sigma/components/rule/: c2_sigma_rule.sql  mod.rs  sigma.rs
src/sigma/events/: field.rs  field_dictionary.rs  firewall.rs  tags.rs
src/sigma/logging/: mod.rs
src/sigma/utilities/: ip_utils.rs  rule_selector.rs
