[package]
name = "infinyon-sigma"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.38"
thiserror = "1"
ipnet = "2.8.0"
regex = "1.9.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.22"
uuid = "1.4.0"
serde_json = "1"
chrono = "0.4"
dyn-clone = "1.0"
tracing = "0.1.19"
